--- a/_config.yml
+++ b/_config.yml
@@ -104,8 +104,8 @@ author:
   name             : "Dokekaka"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "안녕하세요:)"
-  location         : 
-  email            :
+  location         :
+  email            : ssh5027@gamil.com
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -217,7 +217,7 @@ sass:
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Asia/Seoul # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins (previously gems:)
